log
Fri 10 Mar 2023 12:08:25 PM UTC: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
9acb3a8
Fri 10 Mar 2023 12:15:44 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
9c60432
Fri 10 Mar 2023 12:18:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:76:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   76 |    return *vector;
      |           ^~~~~~~
exercises.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
351d76d
Fri 10 Mar 2023 12:18:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
aed26fd
Fri 10 Mar 2023 12:18:50 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
36423ac
Fri 10 Mar 2023 12:19:31 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
fb99b23
Fri 10 Mar 2023 12:21:09 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
8c7a994
Fri 10 Mar 2023 12:23:34 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:76:15: error: ‘var’ is used uninitialized [-Werror=uninitialized]
   76 |    var->datos = calloc(n,sizeof(int));
      |    ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f23a169
Fri 10 Mar 2023 12:23:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:76:15: error: ‘var’ is used uninitialized [-Werror=uninitialized]
   76 |    var->datos = (int *) calloc(n,sizeof(int));
      |    ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
257d05b
Fri 10 Mar 2023 12:25:03 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
359fc3c
Fri 10 Mar 2023 05:24:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
d43d56c
